2025-09-12
- Fix alignment bug for ID-tagged AI outputs: when mapping redaction/rephrase results back to comments, coerce `originalRow`/`scannedIndex` to numbers before comparison. This prevents misses when IDs arrive as strings (e.g., "10") while comments hold numbers (10), which could show original text instead of redacted for some rows.
- Frontend merge now preserves backend `finalText` and `mode` fields so UI can reliably display AI-processed text even if `redactedText`/`rephrasedText` are omitted in some routes.

- Respect RPM: serialize redaction and rephrase calls per model/group and use the actual group's `rpm_limit` for pacing via `enforceRpmDelay`. This avoids parallel hits to the same model that could trigger "Too Many Requests" on Bedrock Anthropic Claude (haiku).

- Remove hard caps on batch size: Removed both `DEFAULT_POST_PROCESS_BATCH_SIZE = 100` limit and provider/model-specific hard caps (GPT-4o-mini: 12, Claude Haiku: 10). Batch size is now determined purely by token limits and RPM constraints, allowing larger batches when token capacity permits.

Files impacted:
- supabase/functions/post-process-comments/index.ts
- src/components/CommentEditor.tsx
# 2025-09-13
- Ensure fallback redactions are surfaced to UI: when AI redaction output is empty but the deterministic policy redaction changes the text, include `redactedText` in the response. This fixes cases where the final column could show the original text due to missing `redactedText` despite a redacted `finalText`.
- No change to `rephrasedText` behavior: still only included when AI produces a rephrase (to avoid echoing originals).

Files impacted:
- supabase/functions/post-process-comments/index.ts
 
## 2025-09-13 (later)
- Prevent "pending" AI logs on last batches by adding a dynamic timeout derived from remaining function time, passed into `callAI` (Azure/OpenAI/Bedrock). Avoids edge cap termination without response logging.