@@ -1,3 +1,10 @@
+2025-09-15
+- Respect `phase` parameter when invoking AI calls. When `phase` is `redaction`, the function will no longer initiate any rephrase calls. When `phase` is `rephrase`, the function will skip redaction calls. When `phase` is `both`, execution remains two-phased internally with rephrase only starting after all redactions across models have completed. This prevents rephrase calls from starting early when the client orchestrates phases in separate invocations.
+- Added explicit logs indicating when a phase is skipped due to the requested `phase`.
+
+Files impacted:
+- supabase/functions/post-process-comments/index.ts
+
 2025-09-12
 - Fix alignment bug for ID-tagged AI outputs: when mapping redaction/rephrase results back to comments, coerce `originalRow`/`scannedIndex` to numbers before comparison. This prevents misses when IDs arrive as strings (e.g., "10") while comments hold numbers (10), which could show original text instead of redacted for some rows.
 - Frontend merge now preserves backend `finalText` and `mode` fields so UI can reliably display AI-processed text even if `redactedText`/`rephrasedText` are omitted in some routes.
